Updates in April 2019

--- a/index.html
+++ b/index.html
@@ -2224,14 +2224,22 @@ Where elementID is one of:
 	place.lastChild.innerHTML=expandlabel;
 &lt;/script&gt;</pre>
 </div>
-<div title="Experiences" modifier="Xihao" created="201108280827" modified="201610032124" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="32">
-<pre>!Research Associate
-''Leader:'' Dr. Xue, Yuanchao
+<div title="Experiences" modifier="Xihao" created="201108280827" modified="201904181454" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="35">
+<pre>!Postdoctoral Research Fellow
+''Leader:'' [[Dr. Liu, Xiaole | http://liulab.dfci.harvard.edu/]]
+''Place:'' ~Dana-Farber Cancer Institute
+''Period:'' 10/2016 -- 4/2019
+''Works:'' 
+#Designed a ~DNA-based ~TCR-seq protocal.
+#Analyzed ~TCR-seq and ~CyTOF data from Hodgkin lymphoma patients in ICB treatments.
+#Described the BCR landscape in more than 10,000 TCGA samples.
+!Research Associate
+''Leader:'' [[Dr. Xue, Yuanchao | http://english.ibp.cas.cn/ibp_pi/XY/201410/t20141031_130363.html]]
 ''Place:'' Institute of Biophysics, Chinese Academy of Sciences
 ''Period:'' 9/2015 -- 9/2016
 ''Works:'' 
-#Building pipelines for processing ~ChIP-seq, ~RNA-seq, and ~CLIP-seq data;
-#Maintaining the computational environment.
+#Built pipelines for processing ~ChIP-seq, ~RNA-seq, and ~CLIP-seq data.
+#Maintained the computing environment.
 !Visiting Student
 ''Supervisor:'' [[Dr. Lu, Zhi | http://bioinfo.life.tsinghua.edu.cn/lulab/PI.html]]
 ''Place:'' Tsinghua University
@@ -3866,8 +3874,12 @@ Powered by &lt;a href='http://www.tiddlywiki.com/'&gt;TiddlyWiki&lt;/a&gt;
 
 &lt;!--}}}--&gt;</pre>
 </div>
-<div title="Projects" modifier="Xihao" created="201108280828" modified="201606230749" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="33">
-<pre>!BNMF(Sep 2012 - Dec 2015)
+<div title="Projects" modifier="Xihao" created="201108280828" modified="201904181534" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="37">
+<pre>!~TRUST3 (Apr 2018 - Feb 2019)
+Validating the performance of ~TRUST3 in calling B cell receptor heavy chains. ([[project page|https://bitbucket.org/liulab/ng-bcr-validate/src]])
+!~TCR-seq (Dec 2016 - Aug 2018)
+~DNA-based ~TCR-seq experimental protocal and data processing pipeline.
+!BNMF (Sep 2012 - Dec 2015)
 Studying global ~DNA-DNA long-range interactions in the 3D genome. ([[project page|http://yiplab.cse.cuhk.edu.hk/bnmf/]])
 !Protein-protein interaction (Aug 2013 - Feb 2014)
 Joint project with Yu's lab.
@@ -3876,22 +3888,30 @@ Modeling RNA structural probing data. ([[project page|http://yiplab.cse.cuhk.edu
 !SDR (Jan 2011 - Aug 2011)
 PDZ domains binding to peptides</pre>
 </div>
-<div title="Publications" modifier="Xihao" created="201108280827" modified="201606230805" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="25">
+<div title="Publications" modifier="Xihao" created="201108280827" modified="201904181521" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="28">
 <pre>[img[My Citations from Google Scholar|https://www.google.com/intl/en/images/scholar_logo_md_2011.gif][http://scholar.google.com/citations?user=m_F7wUwAAAAJ&amp;hl=en]]
 !!FIRST AUTHOR
-#''Xihao Hu'', Huan Shi and Kevin Y. Yip. __A novel method for discovering local spatial clusters of genomic regions with functional relationships from DNA contact maps.__ //''Bioinformatics''//, 2016, 32 (12): i111-i120.
-#''Xihao Hu'', Yang Wu, Zhi John Lu, Kevin Y Yip. __Analysis of sequencing data for probing RNA secondary structures and protein&#8211;RNA binding in studying posttranscriptional regulations.__ //''Briefings in Bioinformatics''//, 2015, bbv106
-#''Xihao Hu'', Thomas K. F. Wong, Zhi John Lu, Ting Fung Chan, Terrence Chi Kong Lau, Siu Ming Yiu and Kevin Y. Yip. __Computational identification of protein binding sites on ~RNAs using high-throughput RNA structure-probing data.__ //''Bioinformatics''//, 2013, btt757.
-#''Xihao Hu'', Hiroshi Mamitsuka, Shanfeng Zhu. __Ensemble approaches for improving HLA Class I-peptide binding prediction.__ //''Journal of Immunological Methods''//, 2011, 30;374(1-2):47-52.
-#''Xihao Hu'', Wenjian Zhou, Keiko Udaka, Hiroshi Mamitsuka, and Shanfeng Zhu. __~MetaMHC: a meta approach to predict peptides binding to MHC molecules.__ //''Nucleic Acids Research''//, 2010, 38(2):~W474-W479.
+#''Xihao Hu'', Jian Zhang, Jin Wang, Jingxin Fu, Taiwen Li, Xiaoqi Zheng, Binbin Wang, Shengqing Gu, Peng Jiang, Jingyu Fan, Xiaomin Ying, Jing Zhang, Michael C Carroll, Kai W Wucherpfennig, Nir Hacohen, Fan Zhang, Peng Zhang, Jun S Liu, Bo Li, X Shirley Liu. __Landscape of B cell immunity and related immune evasion in human cancers.__ //''Nature Genetics''//, 2019. 
+#''Xihao Hu'', Jian Zhang, Jun S Liu, Bo Li, Xiaole Shirley Liu. __Evaluation of immune repertoire inference methods from ~RNA-seq data.__ //''Nature Biotechnology''//, 2018.
+#''Xihao Hu'', Huan Shi and Kevin Y. Yip. __A novel method for discovering local spatial clusters of genomic regions with functional relationships from DNA contact maps.__ //''Bioinformatics''//, 2016.
+#''Xihao Hu'', Yang Wu, Zhi John Lu, Kevin Y Yip. __Analysis of sequencing data for probing RNA secondary structures and protein&#8211;RNA binding in studying posttranscriptional regulations.__ //''Briefings in Bioinformatics''//, 2015.
+#''Xihao Hu'', Thomas K. F. Wong, Zhi John Lu, Ting Fung Chan, Terrence Chi Kong Lau, Siu Ming Yiu and Kevin Y. Yip. __Computational identification of protein binding sites on ~RNAs using high-throughput RNA structure-probing data.__ //''Bioinformatics''//, 2013.
+#''Xihao Hu'', Hiroshi Mamitsuka, Shanfeng Zhu. __Ensemble approaches for improving HLA Class I-peptide binding prediction.__ //''Journal of Immunological Methods''//, 2011.
+#''Xihao Hu'', Wenjian Zhou, Keiko Udaka, Hiroshi Mamitsuka, and Shanfeng Zhu. __~MetaMHC: a meta approach to predict peptides binding to MHC molecules.__ //''Nucleic Acids Research''//, 2010.
 !!~CO-AUTHOR
-#Yuanchao Xue, Hao Qian, Jing Hu, Bing Zhou, Yu Zhou, ''Xihao Hu'', Aziz Karakhanyan, Zhiping Pang and ~Xiang-Dong Fu. __Sequential regulatory loops as key gatekeepers for neuronal reprogramming in human cells.__ //''Nature Neuroscience''//, 2016, 19;807&#8211;815.
-#Yang Wu, Binbin Shi, Xinqiang Ding, Tong Liu, ''Xihao Hu'', Kevin Y Yip, Zheng Rong Yang, David H Mathews, Zhi John Lu. __Improved prediction of RNA secondary structure by integrating the free energy model with restraints derived from experimental probing data.__ //''Nucleic Acids Research''//, 2015, 43 (15): 7247-7259.
-#Long Hu, Chao Di, Mingxuan Kai, ~Yu-Cheng T. Yang, Yang Li, Yunjiang Qiu, ''Xihao Hu'', Kevin Y. Yip, Michael Q. Zhang and Zhi John Lu. __A common set of distinct features that characterize noncoding ~RNAs across multiple species.__ //''Nucleic Acids Research''//, 2014, gku1316.
-#Guang Lan Zhang, Hifzur Rahman Ansari, Phil Bradley, Gavin C Cawley, Tomer Hertz, ''Xihao Hu'', Nebojsa Jojic, et al. __Machine Learning Competition in Immunology&#8211;Prediction of HLA class I molecules.__ //''Journal of Immunological Methods''//, 2011, 30;374(1-2):1-4.
-#Kevin Y. Yip, Lukas Utz, Simon Sitwell, ''Xihao Hu'', Sachdev S. Sidhu, Benjamin E. Turk, Mark B. Gerstein and Philip M. Kim. __Identification of specificity determining residues in peptide recognition domains using an information theoretic approach applied to large-scale binding maps.__ //''BMC Biology''//, 2011, 9:53.
-#Lian Wang, Danling Pan, ''Xihao Hu'', Jinyu Xiao, Yangyang Gao, Huifang Zhang, Yan Zhang, Juan Liu, and Shanfeng Zhu. __~BiodMHC: an online server for the prediction of MHC class ~II-peptide binding af&#64257;nity.__ //''Journal of Genetics and Genomics''//, 2009, 36(5):289-296.
-#Wen Zhang, Juan Liu, Yan Qing Niu, Lian Wang, and ''Xihao Hu''. __A Bayesian regression approach to the prediction of ~MHC-II binding affinity.__ //''Computer Methods and Programs in Biomedicine''//, 2008, 92(1):1-7.
+#Juan Chen, Zhaokui Cai, Meizhu Bai, Xiaohua Yu, Chao Zhang, Changchang Cao, ''Xihao Hu'', Lei Wang, Ruibao Su, Di Wang, Yingpeng Yao, Rong Ye, Baidong Hou, Yang Yu, Shuyang Yu, Jinsong Li, Yuanchao Xue. __The ~RNA-binding protein ~ROD1/~PTBP3 cotranscriptionally defines ~AID-loading sites to mediate antibody class switch in mammalian genomes.__ //''Cell Research''//, 2018
+#Fathima Zumla Cader, Ron CJ Schackmann, ''Xihao Hu'', Kirsty Wienand, Robert Redd, Bjoern Chapuy, Jing Ouyang, Nicole Paul, Evisa Gjini, Mikel Lipschitz, Philippe Armand, David Wu, Jonathan R Fromm, Donna Neuberg, X Shirley Liu, Scott J Rodig, Margaret A Shipp. __Mass cytometry of Hodgkin lymphoma reveals a ~CD4+ regulatory ~T-cell&#8211;rich and exhausted ~T-effector microenvironment.__ //''Blood''//, 2018.
+#Peng Jiang, Shengqing Gu, Deng Pan, Jingxin Fu, Avinash Sahu, ''Xihao Hu'', Ziyi Li, Nicole Traugh, Xia Bu, Bo Li, Jun Liu, Gordon J Freeman, Myles A Brown, Kai W Wucherpfennig, X Shirley Liu. __Signatures of T cell dysfunction and exclusion predict cancer immunotherapy response.__ //''Nature Medicine''//, 2018.
+#Xue Zhang, Wangxin Xiao, ''Xihao Hu''. __Predicting essential proteins by integrating orthology, gene expressions, and PPI networks.__ //''~PloS one''//, 2018.
+#Christopher D Carey, Daniel Gusenleitner, Mikel Lipschitz, Margaretha GM Roemer, Edward C Stack, Evisa Gjini, ''Xihao Hu'', Robert Redd, Gordon J Freeman, Donna Neuberg, F Stephen Hodi, Xiaole Shirley Liu, Margaret A Shipp, Scott J Rodig. __Topological analysis reveals a ~PD-L1-associated microenvironmental niche for ~Reed-Sternberg cells in Hodgkin lymphoma.__ //''Blood''//, 2017.
+#Qin Cao, Christine Anyansi, ''Xihao Hu'', Liangliang Xu, Lei Xiong, Wenshu Tang, Myth TS Mok, Chao Cheng, Xiaodan Fan, Mark Gerstein, Alfred SL Cheng, Kevin Y Yip. __Reconstruction of enhancer&#8211;target networks in 935 samples of human primary cells, tissues and cell lines.__ //''Nature Genetics''//, 2017.
+#Yuanchao Xue, Hao Qian, Jing Hu, Bing Zhou, Yu Zhou, ''Xihao Hu'', Aziz Karakhanyan, Zhiping Pang and ~Xiang-Dong Fu. __Sequential regulatory loops as key gatekeepers for neuronal reprogramming in human cells.__ //''Nature Neuroscience''//, 2016.
+#Yang Wu, Binbin Shi, Xinqiang Ding, Tong Liu, ''Xihao Hu'', Kevin Y Yip, Zheng Rong Yang, David H Mathews, Zhi John Lu. __Improved prediction of RNA secondary structure by integrating the free energy model with restraints derived from experimental probing data.__ //''Nucleic Acids Research''//, 2015.
+#Long Hu, Chao Di, Mingxuan Kai, ~Yu-Cheng T. Yang, Yang Li, Yunjiang Qiu, ''Xihao Hu'', Kevin Y. Yip, Michael Q. Zhang and Zhi John Lu. __A common set of distinct features that characterize noncoding ~RNAs across multiple species.__ //''Nucleic Acids Research''//, 2014.
+#Guang Lan Zhang, Hifzur Rahman Ansari, Phil Bradley, Gavin C Cawley, Tomer Hertz, ''Xihao Hu'', Nebojsa Jojic, et al. __Machine Learning Competition in Immunology&#8211;Prediction of HLA class I molecules.__ //''Journal of Immunological Methods''//, 2011.
+#Kevin Y. Yip, Lukas Utz, Simon Sitwell, ''Xihao Hu'', Sachdev S. Sidhu, Benjamin E. Turk, Mark B. Gerstein and Philip M. Kim. __Identification of specificity determining residues in peptide recognition domains using an information theoretic approach applied to large-scale binding maps.__ //''BMC Biology''//, 2011.
+#Lian Wang, Danling Pan, ''Xihao Hu'', Jinyu Xiao, Yangyang Gao, Huifang Zhang, Yan Zhang, Juan Liu, and Shanfeng Zhu. __~BiodMHC: an online server for the prediction of MHC class ~II-peptide binding af&#64257;nity.__ //''Journal of Genetics and Genomics''//, 2009.
+#Wen Zhang, Juan Liu, Yan Qing Niu, Lian Wang, and ''Xihao Hu''. __A Bayesian regression approach to the prediction of ~MHC-II binding affinity.__ //''Computer Methods and Programs in Biomedicine''//, 2008.
 </pre>
 </div>
 <div title="QuickEditPackage" modifier="ELSDesignStudios" created="200801120200" modified="200903231048" tags="QuickEditPackage BasicsPackage" creator="ELSDesignStudios" changecount="1">
@@ -5342,10 +5362,13 @@ config.macros.recentChanges = {
 		story.refreshTiddler(here.getAttribute(&quot;tiddler&quot;),null,true);
 &lt;/script&gt;&lt;script&gt;place.lastChild.className='button';&lt;/script&gt;</pre>
 </div>
-<div title="Rewards" modifier="Xihao" created="201108280827" modified="201209280602" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="28">
-<pre>!!2012
+<div title="Rewards" modifier="Xihao" created="201108280827" modified="201904181505" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="38">
+<pre>!!2019
+*Awardee of [[Parker Scholars|https://www.parkerici.org/2019/02/06/the-parker-institute-for-cancer-immunotherapy-expands-its-network-to-include-more-rising-stars-in-cancer-immunotherapy]] who are recognized as rising stars in Cancer Immunotherapy.
+[img(200px,100px)[2019 Parker Scholars|award_parker2019.jpg][award_parker2019.jpg]]
+!!2012
 *Certificate of Merit for excellent teaching assistantship at department of Computer Science and Engineering, CUHK.
-[img(150px,100px)[photocopy of certificate |award_ta2012.jpg][award_ta2012.jpg]]
+[img(150px,100px)[photocopy of certificate|award_ta2012.jpg][award_ta2012.jpg]]
 !!2009
 *A winner of Machine Learning in Immunology competition ([[MLI|http://www.kios.org.cy/ICANN09/MLI.html]]) in A*0101 (9mers).
 [img(150px,100px)[photocopy of award|award_mli2009.jpg][award_mli2009.jpg]]
@@ -8770,10 +8793,10 @@ config.macros.wikiCalc=config.macros.wikify;
 <div title="WindowTitle" modifier="Xihao" created="201108280831" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280831" creator="YourName">
 <pre>Xihao Hu's Homepage</pre>
 </div>
-<div title="Xihao" modifier="Xihao" created="201108280826" modified="201610072030" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="51">
+<div title="Xihao" modifier="Xihao" created="201108280826" modified="201904181440" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="55">
 <pre>[img[Xihao at home in Chestnut Hill on Oct 6, 2018.|XihaoAtHome2018.jpg]]
 
-I'm a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard University. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of Chinese University of Hong Kong, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
+I'm the Chief Scientist at [[GV20 Therapeutics LLC|https://github.com/gv20-therapeutics]], a startup for antibody drug discovery. Before that, I was a postdoctoral research fellow in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at [[Dana-Farber Cancer Institute|https://www.dana-farber.org/]], an affiliate of Harvard University. I got the Ph.D. degree under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]] from the [[CSE department|http://www.cse.cuhk.edu.hk]] of Chinese University of Hong Kong, where my research area was //Computational Biology and Bioinformatics//.
 
 My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember it from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
 &gt;//Who// is she?
